--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js"></script>
 
 	<div id="id">
-		Welcome to the world of Web Development
+		Welcome to the world of Web development
 	</div>
 </body>
 
