--- a/main.html
+++ b/main.html
@@ -7,12 +7,12 @@
 </head>
 
 <body>
+	<div id="text">
+		<h2>Welcome to the world of Web development</h2>
+	</div>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
-
-	<div id="id">
-		"Welcome to the world of Web development"
-	</div>
 </body>
 
 </html>
